--- a/week1/community-contributions/02_brochure_generator.ipynb
+++ b/week1/community-contributions/02_brochure_generator.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3fe5670c-5146-474b-9e75-484210533f55",
    "metadata": {},
    "outputs": [],
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "fa2bd452-0cf4-4fec-9542-e1c86584c23f",
    "metadata": {},
    "outputs": [],
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "aed1af59-8b8f-4add-98dc-a9f1b5b511a5",
    "metadata": {},
    "outputs": [],
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "ea04dc7e-ff4c-4113-83b7-0bddcf5072b9",
    "metadata": {},
    "outputs": [],
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "1c69651f-e004-421e-acc5-c439e57a8762",
    "metadata": {},
    "outputs": [],
@@ -328,10 +328,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "1a63519a-1981-477b-9de1-f1ff9be94201",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "# 🗼 Brochure Amusante de la Tour Eiffel 🎉\n",
+       "\n",
+       "### Bienvenue à la Maison de la « Vue Éblouissante »! \n",
+       "\n",
+       "Ah, la Tour Eiffel! Ce monument iconique qui fait battre le cœur de millions de visiteurs - et qui a même surpris quelques mouettes dans le coin! Ici, chaque instant est aussi mémorable qu'un croissant sorti du four.\n",
+       "\n",
+       "---\n",
+       "\n",
+       "### 🕒 Horaires Et Tarifs\n",
+       "\n",
+       "**Horaires :** De 09h30 à 23h00  \n",
+       "**Tarif :** Peut faire perdre la tête, mais pas votre porte-monnaie! Achetez vos billets en ligne pour gagner du temps et éviter de faire la queue comme si vous attendiez une baguette!\n",
+       "\n",
+       "---\n",
+       "\n",
+       "### 🎢 Votre Voyage Ascensionnel\n",
+       "\n",
+       "Préparez-vous à une ascension unique où les émotions vous emportent du parvis au sommet. Oui, même vos fréquences cardiaques risquent d'atteindre de nouveaux sommets! Allez jusqu'au 1er et 2ème étage – il y a même des escaliers si vous voulez faire un peu d'exercice avant de célébrer votre victoire avec un verre de vin au sommet!\n",
+       "\n",
+       "---\n",
+       "\n",
+       "### 🌿 Faites une Pause!\n",
+       "\n",
+       "**Nouveau!** Offrez-vous une pause dans notre jardin Végétalisé au 1er étage! Un oasis de verdure où même les plantes envient votre style! \n",
+       "\n",
+       "---\n",
+       "\n",
+       "### 🎓 Pour les Familles\n",
+       "\n",
+       "Ne ratez pas nos livrets ludo-éducatifs! (Pas besoin d'être Einstein pour les comprendre, même les parents s'en sortent!)\n",
+       "\n",
+       "---\n",
+       "\n",
+       "### 🍴 Restaurants & Boutiques\n",
+       "\n",
+       "Qui veut faire rimer tourisme avec gastronomie? Découvrez nos restaurants étoilés où la cuisine s’illumine presque autant que la tour elle-même! Et n’oubliez pas de vous stoppez à notre boutique pour des souvenirs que vos amis n’arrêteront pas de jalouser!\n",
+       "\n",
+       "---\n",
+       "\n",
+       "### 🌟 Événements à ne pas Manquer\n",
+       "\n",
+       "- **Octobre Rose 2025 :** La Tour s’illumine en rose pour soutenir la lutte contre le cancer du sein. Parce que même les monuments peuvent être solidaires!\n",
+       "  \n",
+       "- **Événement spécial :** « Chaque visite est unique » – même si vous venez toujours le même jour!\n",
+       "\n",
+       "---\n",
+       "\n",
+       "### 🌍 Rejoignez Nous!\n",
+       "\n",
+       "Vous aimez l'architecture, les gens et faire le tour du monde sans bouger de votre chaise? Nous avons besoin de vous!   \n",
+       "**Opportunités de carrière:** Devenez guide, artisan du tour Eiffel, ou simplement une légende urbaine.\n",
+       "\n",
+       "---\n",
+       "\n",
+       "### Suivez-Nous Sur Les Réseaux Sociaux!\n",
+       "\n",
+       "Pour des jeux-concours, des photos exclusives, et la dernière  tendance : la tour en rose!\n",
+       "\n",
+       "**Facebook, Instagram, Twitter –** parce que qui n'aime pas se vanter un peu sur les réseaux?\n",
+       "\n",
+       "---\n",
+       "\n",
+       "### Conclusion\n",
+       "\n",
+       "Alors, qu’attendez-vous? Faites le choix de l’ascension, ne laissez pas passer cet événement irrésistible. Prenez vos billets, venez nous visiter, et surtout... n'oubliez pas de sourire, pendant que vous êtes sous le regard attentif de la Dame de Fer! 🗼✨\n",
+       "\n",
+       "--- \n",
+       "\n",
+       "**La Tour Eiffel – Plus qu’un monument, une expérience!**"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "def main():\n",
     "    company_name = \"Tour Eiffel\"\n",
@@ -344,11 +425,19 @@
     "if __name__ == \"__main__\":\n",
     "    main()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2fd6446-6d7a-4d58-8458-6cf604b776a8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -362,7 +451,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
