--- a/week1/community-contributions/day1_coverletter_tailored_to_CV_and_job_description.ipynb
+++ b/week1/community-contributions/day1_coverletter_tailored_to_CV_and_job_description.ipynb
@@ -189,9 +189,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (llms)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "llms"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
