--- a/week1/day1.ipynb
+++ b/week1/day1.ipynb
@@ -128,6 +128,49 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d6b368e-728a-4a9d-8e9b-0d41cfd15ac9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    result = 5 / 0\n",
+    "except ZeroDivisionError:\n",
+    "    print(\"You can't divide by zero!\")\n",
+    "finally:\n",
+    "    print(\"Done.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1bf7d5aa-670e-4eaa-a7a4-a0059fe5bae7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    x = int(\"hello\")  # Causes a ValueError\n",
+    "except ValueError:\n",
+    "    print(\"That's not an integer.\")\n",
+    "except TypeError:\n",
+    "    print(\"Wrong type.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9870195c-2854-44bb-b451-bc670c3de536",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    do_something()\n",
+    "except Exception as e:\n",
+    "    print(f\"Something went wrong: {e}\")\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "6900b2a8-6384-4316-8aaa-5e519fca4254",
    "metadata": {},
@@ -440,6 +483,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4a435e96-7e04-4c6d-9f87-d1c915d1c137",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display(Markdown(summarize(\"https://edwarddonner.com\")))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "3d926d59-450e-4609-92ba-2d6f244f1342",
    "metadata": {},
    "outputs": [],
@@ -498,6 +551,51 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "9aaebc1d-ecef-4658-b768-bb8204077ff4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "# Vencomatic Group Overview\n",
+       "\n",
+       "Vencomatic Group specializes in innovative, animal-friendly poultry solutions, focusing on enhancing the welfare and productivity of birds. Their offerings span various areas including housing, egg handling, climate control, and precision farming technologies, all aimed at improving operational excellence and sustainability in the poultry industry.\n",
+       "\n",
+       "## Key Products and Services\n",
+       "- **Housing Solutions**: Comfortable and stimulating environments for poultry.\n",
+       "- **Egg Handling & Collection**: Efficient systems to ensure the safe journey of eggs from hatchery to packing.\n",
+       "- **Climate Solutions**: Optimal environmental conditions for growth and production.\n",
+       "- **Precision Farming with Meggsius**: Data-driven solutions for maximizing poultry potential.\n",
+       "\n",
+       "## Recent News and Announcements\n",
+       "- **Savinord Case Study**: Highlights the company's efforts in modernization and efficiency in Tunisian broiler breeding.\n",
+       "- **35-Year Partnership**: Acknowledgement of a long-term collaboration with Taramatic, transitioning to Felleskjøpet.\n",
+       "  \n",
+       "## Upcoming Events\n",
+       "Vencomatic Group is participating in various industry events including:\n",
+       "- **SPACE (Rennes)**: September 16-18\n",
+       "- **ILDEX Indonesia (Jakarta)**: September 17-19\n",
+       "- **Dutch Pork & Poultry Expo (Den Bosch)**: October 15-16\n",
+       "- **Agrena Egypt (Cairo)**: October 16-18\n",
+       "\n",
+       "## Core Values\n",
+       "Vencomatic Group emphasizes animal welfare, operational excellence, and innovation, positioning themselves as leaders in the poultry sector by integrating smart technologies and data analytics into their offerings."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display_summary(\"https://www.vencomaticgroup.com/\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c951be1a-7f1b-448f-af1f-845978e47e2c",
    "metadata": {},
@@ -538,23 +636,28 @@
    "source": [
     "# Step 1: Create your prompts\n",
     "\n",
-    "system_prompt = \"something here\"\n",
+    "system_prompt = \"You are a football reporter that reports the games of a day \\\n",
+    "and provides a short summary, ignoring text that might be navigation related. \\\n",
+    "The summary should highlight the important things that happened in each game. \\\n",
+    "Respond in markdown.\"\n",
     "user_prompt = \"\"\"\n",
-    "    Lots of text\n",
-    "    Can be pasted here\n",
+    "    Give me the summary of the games on 9th of september 2023\n",
     "\"\"\"\n",
     "\n",
     "# Step 2: Make the messages list\n",
     "\n",
-    "messages = [] # fill this in\n",
+    "messages = [\n",
+    "        {\"role\": \"system\", \"content\": system_prompt},\n",
+    "        {\"role\": \"user\", \"content\": user_prompt}\n",
+    "    ] # fill this in\n",
     "\n",
     "# Step 3: Call OpenAI\n",
     "\n",
-    "response =\n",
+    "response = openai.chat.completions.create(model=\"gpt-4o-mini\", messages=messages)\n",
     "\n",
     "# Step 4: print the result\n",
     "\n",
-    "print("
+    "print(response.choices[0].message.content)"
    ]
   },
   {
@@ -607,7 +710,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.12"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
