--- a/week2/day3.ipynb
+++ b/week2/day3.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "70e39cd8-ec79-4e3e-9c26-5659d42d0861",
    "metadata": {},
    "outputs": [],
@@ -25,10 +25,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "231605aa-fccb-447e-89cf-8b187444536a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OpenAI API Key exists and begins sk-proj-\n",
+      "Anthropic API Key exists and begins sk-ant-\n",
+      "Google API Key exists and begins AIzaSyA8\n"
+     ]
+    }
+   ],
    "source": [
     "# Load environment variables in a file called .env\n",
     "# Print the key prefixes to help with any debugging\n",
@@ -56,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "6541d58e-2297-4de1-b1f7-77da1b98b8bb",
    "metadata": {},
    "outputs": [],
@@ -69,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "e16839b5-c03b-4d9d-add6-87a0f6f37575",
    "metadata": {},
    "outputs": [],
@@ -112,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "1eacc8a4-4b48-4358-9e06-ce0020041bc1",
    "metadata": {},
    "outputs": [],
@@ -149,17 +159,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "0866ca56-100a-44ab-8bd0-1568feaf6bf2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7896\n",
+      "* To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7896/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "History is:\n",
+      "[]\n",
+      "And messages is:\n",
+      "[{'role': 'system', 'content': 'You are a helpful assistant'}, {'role': 'user', 'content': 'hello'}]\n",
+      "History is:\n",
+      "[{'role': 'user', 'metadata': None, 'content': 'hello', 'options': None}, {'role': 'assistant', 'metadata': None, 'content': 'Hello! How can I assist you today?', 'options': None}]\n",
+      "And messages is:\n",
+      "[{'role': 'system', 'content': 'You are a helpful assistant'}, {'role': 'user', 'metadata': None, 'content': 'hello', 'options': None}, {'role': 'assistant', 'metadata': None, 'content': 'Hello! How can I assist you today?', 'options': None}, {'role': 'user', 'content': 'i want to buy a book'}]\n",
+      "History is:\n",
+      "[{'role': 'user', 'metadata': None, 'content': 'hello', 'options': None}, {'role': 'assistant', 'metadata': None, 'content': 'Hello! How can I assist you today?', 'options': None}, {'role': 'user', 'metadata': None, 'content': 'i want to buy a book', 'options': None}, {'role': 'assistant', 'metadata': None, 'content': 'Great! What type of book are you looking for? Fiction, non-fiction, a specific genre, or a particular subject? Let me know your preferences, and I can help you find a good one!', 'options': None}]\n",
+      "And messages is:\n",
+      "[{'role': 'system', 'content': 'You are a helpful assistant'}, {'role': 'user', 'metadata': None, 'content': 'hello', 'options': None}, {'role': 'assistant', 'metadata': None, 'content': 'Hello! How can I assist you today?', 'options': None}, {'role': 'user', 'metadata': None, 'content': 'i want to buy a book', 'options': None}, {'role': 'assistant', 'metadata': None, 'content': 'Great! What type of book are you looking for? Fiction, non-fiction, a specific genre, or a particular subject? Let me know your preferences, and I can help you find a good one!', 'options': None}, {'role': 'user', 'content': 'fiction'}]\n"
+     ]
+    }
+   ],
    "source": [
     "gr.ChatInterface(fn=chat, type=\"messages\").launch()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "id": "1f91b414-8bab-472d-b9c9-3fa51259bdfe",
    "metadata": {},
    "outputs": [],
@@ -173,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "4e5be3ec-c26c-42bc-ac16-c39d369883f6",
    "metadata": {},
    "outputs": [],
@@ -191,17 +248,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "413e9e4e-7836-43ac-a0c3-e1ab5ed6b136",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7897\n",
+      "* To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7897/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "gr.ChatInterface(fn=chat, type=\"messages\").launch()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "id": "d75f0ffa-55c8-4152-b451-945021676837",
    "metadata": {},
    "outputs": [],
@@ -212,17 +298,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "c602a8dd-2df7-4eb7-b539-4e01865a6351",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7898\n",
+      "* To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7898/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "gr.ChatInterface(fn=chat, type=\"messages\").launch()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "0a987a66-1061-46d6-a83a-a30859dc88bf",
    "metadata": {},
    "outputs": [],
@@ -248,10 +363,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "20570de2-eaad-42cc-a92c-c779d71b48b6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7899\n",
+      "* To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7899/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "gr.ChatInterface(fn=chat, type=\"messages\").launch()"
    ]
@@ -278,8 +422,146 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "id": "6dfb9e21-df67-4c2b-b952-5e7e7961b03d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sys_prompt(message):\n",
+    "    triggers = {\n",
+    "        \"15\": [\"T-shirt\", \"skirt\", \"trousers\", \"hats\"],\n",
+    "        \"20\": [\"shoes\", \"tie\", \"book\"],\n",
+    "        \"40\": [\"album\", \"disk\", \"vinyl\", \"shoes\"]\n",
+    "    }\n",
+    "    \n",
+    "    # find the key that matches\n",
+    "    matched_key = None\n",
+    "    for key, words in triggers.items():\n",
+    "        if any(word in message.lower() for word in words):\n",
+    "            matched_key = key\n",
+    "            break\n",
+    "    \n",
+    "    if matched_key:\n",
+    "        return f\"you are a helpful assistant, and you need to inform the customer with the price, which is {matched_key} and encourage them to buy\"\n",
+    "    else:\n",
+    "        return f\"you are a helpful assistant.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "fe550948-0297-4e25-9811-67690a398124",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def user_prompt_update(message):\n",
+    "    triggers = {\n",
+    "        \"funny\": [\"belt\"],\n",
+    "        \"angry\": [\"shoes\"]\n",
+    "    }\n",
+    "\n",
+    "    matched_key = None\n",
+    "    msg_lower = message.lower()\n",
+    "\n",
+    "    for key, words in triggers.items():\n",
+    "        for word in words:\n",
+    "            if word in msg_lower:\n",
+    "                matched_key = key\n",
+    "                print(matched_key)\n",
+    "\n",
+    "    if matched_key:\n",
+    "        print(message + f\".Answer in a helpful {matched_key } way.\")\n",
+    "        return message + f\".Answer in a helpful {matched_key } way.\"\n",
+    "    else:\n",
+    "        return message + f\".answer rudely and just say bye.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "f77ab0b5-e93a-40db-a20f-7c053390348b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def chat(message, history):\n",
+    "\n",
+    "    relevant_system_message = sys_prompt(message)\n",
+    "    new_user_message = user_prompt_update(message)\n",
+    "    messages = [{\"role\": \"system\", \"content\": relevant_system_message}] + history + [{\"role\": \"user\", \"content\": new_user_message}]\n",
+    "\n",
+    "\n",
+    "    \n",
+    "    stream = openai.chat.completions.create(model=MODEL, messages=messages, stream=True)\n",
+    "\n",
+    "    response = \"\"\n",
+    "    for chunk in stream:\n",
+    "        response += chunk.choices[0].delta.content or ''\n",
+    "        yield response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "33cc7238-9583-40be-bb8c-90776467cd74",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7935\n",
+      "* To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7935/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "funny\n",
+      "a belt?.Answer in a helpful funny way.\n",
+      "angry\n",
+      "maybe shoes.Answer in a helpful angry way.\n",
+      "angry\n",
+      "idk the size, i need shoes.Answer in a helpful angry way.\n"
+     ]
+    }
+   ],
+   "source": [
+    "gr.ChatInterface(fn=chat, type=\"messages\").launch()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a89c9525-7b6f-4b7d-9b07-80326c96d8bb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7207e101-ebcc-4409-b96c-b26288dd779b",
    "metadata": {},
    "outputs": [],
    "source": []
