--- a/week1/Guide to Jupyter.ipynb
+++ b/week1/Guide to Jupyter.ipynb
@@ -165,6 +165,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ffbde4ca-86bb-4a1d-95f3-4e9e2a6bb163",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"My favorite fruit is {favorite_fruit}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "ce258424-40c3-49a7-9462-e6fa25014b03",
    "metadata": {},
    "outputs": [],
@@ -222,6 +232,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c7b33d37-32ce-4381-9657-33cd2053a3d6",
+   "metadata": {},
+   "source": [
+    "# This is a heading\n",
+    "## This is a sub-head\n",
+    "### And a sub-sub-head\n",
+    "\n",
+    "I like Jupyter Lab because it's\n",
+    "- Easy\n",
+    "- Flexible\n",
+    "- Satisfying"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "e1586320-c90f-4f22-8b39-df6865484950",
@@ -245,10 +270,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "82042fc5-a907-4381-a4b8-eb9386df19cd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Guide to Jupyter.ipynb\n",
+      "Intermediate Python.ipynb\n",
+      "community-contributions\n",
+      "day1.ipynb\n",
+      "day2 EXERCISE.ipynb\n",
+      "day5.ipynb\n",
+      "diagnostics.py\n",
+      "solutions\n",
+      "troubleshooting.ipynb\n",
+      "week1 EXERCISE.ipynb\n"
+     ]
+    }
+   ],
    "source": [
     "# list the current directory\n",
     "\n",
@@ -257,22 +299,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "4fc3e3da-8a55-40cc-9706-48bf12a0e20e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ping request could not find host cnn.como. Please check the name and try again.\n"
+     ]
+    }
+   ],
    "source": [
     "# ping cnn.com - press the stop button in the toolbar when you're bored\n",
     "\n",
-    "!ping cnn.com"
+    "!ping cnn.como"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "a58e9462-89a2-4b4f-b4aa-51c4bd9f796b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "^C\n"
+     ]
+    }
+   ],
    "source": [
     "# This is a useful command that ensures your Anaconda environment \n",
     "# is up to date with any new upgrades to packages;\n",
@@ -295,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "2646a4e5-3c23-4aee-a34d-d623815187d2",
    "metadata": {},
    "outputs": [],
@@ -313,10 +371,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "6e96be3d-fa82-42a3-a8aa-b81dd20563a5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:10<00:00, 94.43it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "# And now, with a nice little progress bar:\n",
     "\n",
@@ -331,10 +397,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "63c788dd-4618-4bb4-a5ce-204411a38ade",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "# This is a big heading!\n",
+       "\n",
+       "- And this is a bullet-point\n",
+       "- So is this\n",
+       "- Me, too!"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# On a different topic, here's a useful way to print output in markdown\n",
     "\n",
@@ -354,6 +437,14 @@
     "\n",
     "If you want to become a pro at Jupyter Lab, you can read their tutorial [here](https://jupyterlab.readthedocs.io/en/latest/). But this isn't required for our course; just a good technique for hitting Shift + Return and enjoying the result!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf68ac36-e70f-4a91-8212-3011e39a3412",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -372,7 +463,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
