--- a/week2/day2.ipynb
+++ b/week2/day2.ipynb
@@ -55,7 +55,7 @@
      "text": [
       "OpenAI API Key exists and begins sk-proj-\n",
       "Anthropic API Key exists and begins sk-ant-\n",
-      "Google API Key exists and begins AIzaSyA5\n"
+      "Google API Key exists and begins AIzaSyA8\n"
      ]
     }
    ],
@@ -142,7 +142,7 @@
     {
      "data": {
       "text/plain": [
-       "\"Today's date is October 10, 2023.\""
+       "\"Today's date is October 25, 2023.\""
       ]
      },
      "execution_count": 7,
@@ -239,6 +239,14 @@
      "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shout has been called with input helloooo\n",
+      "Created dataset file at: .gradio\\flagged\\dataset1.csv\n"
+     ]
     }
    ],
    "source": [
@@ -249,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "c9a359a4-685c-4c99-891c-bb4d1cb7f426",
    "metadata": {},
    "outputs": [
@@ -257,53 +265,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* Running on local URL:  http://127.0.0.1:7861\n",
-      "* Running on public URL: https://c1f6ab5bdc2722c539.gradio.live\n",
-      "\n",
-      "This share link expires in 1 week. For free permanent hosting and GPU upgrades, run `gradio deploy` from the terminal in the working directory to deploy to Hugging Face Spaces (https://huggingface.co/spaces)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div><iframe src=\"https://c1f6ab5bdc2722c539.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": []
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Adding share=True means that it can be accessed publically\n",
-    "# A more permanent hosting is available using a platform called Spaces from HuggingFace, which we will touch on next week\n",
-    "# NOTE: Some Anti-virus software and Corporate Firewalls might not like you using share=True. If you're at work on on a work network, I suggest skip this test.\n",
-    "\n",
-    "gr.Interface(fn=shout, inputs=\"textbox\", outputs=\"textbox\", flagging_mode=\"never\").launch(share=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "cd87533a-ff3a-4188-8998-5bedd5ba2da3",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "* Running on local URL:  http://127.0.0.1:7862\n",
-      "* To create a public link, set `share=True` in `launch()`.\n"
+      "\n",
+      "Could not create share link. Please check your internet connection or our status page: https://status.gradio.app.\n"
      ]
     },
     {
@@ -328,25 +292,17 @@
     }
    ],
    "source": [
-    "# Adding inbrowser=True opens up a new browser window automatically\n",
+    "# Adding share=True means that it can be accessed publically\n",
+    "# A more permanent hosting is available using a platform called Spaces from HuggingFace, which we will touch on next week\n",
+    "# NOTE: Some Anti-virus software and Corporate Firewalls might not like you using share=True. If you're at work on on a work network, I suggest skip this test.\n",
     "\n",
-    "gr.Interface(fn=shout, inputs=\"textbox\", outputs=\"textbox\", flagging_mode=\"never\").launch(inbrowser=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b42ec007-0314-48bf-84a4-a65943649215",
-   "metadata": {},
-   "source": [
-    "## Forcing dark mode\n",
-    "\n",
-    "Gradio appears in light mode or dark mode depending on the settings of the browser and computer. There is a way to force gradio to appear in dark mode, but Gradio recommends against this as it should be a user preference (particularly for accessibility reasons). But if you wish to force dark mode for your screens, below is how to do it."
+    "gr.Interface(fn=shout, inputs=\"textbox\", outputs=\"textbox\", flagging_mode=\"never\").launch(share=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "e8129afa-532b-4b15-b93c-aa9cca23a546",
+   "id": "cd87533a-ff3a-4188-8998-5bedd5ba2da3",
    "metadata": {},
    "outputs": [
     {
@@ -374,6 +330,57 @@
       "text/plain": []
      },
      "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Adding inbrowser=True opens up a new browser window automatically\n",
+    "\n",
+    "gr.Interface(fn=shout, inputs=\"textbox\", outputs=\"textbox\", flagging_mode=\"never\").launch(inbrowser=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b42ec007-0314-48bf-84a4-a65943649215",
+   "metadata": {},
+   "source": [
+    "## Forcing dark mode\n",
+    "\n",
+    "Gradio appears in light mode or dark mode depending on the settings of the browser and computer. There is a way to force gradio to appear in dark mode, but Gradio recommends against this as it should be a user preference (particularly for accessibility reasons). But if you wish to force dark mode for your screens, below is how to do it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "e8129afa-532b-4b15-b93c-aa9cca23a546",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7864\n",
+      "* To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7864/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,6 +433,13 @@
      "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shout has been called with input still shouting?\n"
+     ]
     }
    ],
    "source": [
@@ -489,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 90,
    "id": "af9a3262-e626-4e4b-80b0-aca152405e63",
    "metadata": {},
    "outputs": [
@@ -497,14 +511,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* Running on local URL:  http://127.0.0.1:7867\n",
+      "* Running on local URL:  http://127.0.0.1:7907\n",
       "* To create a public link, set `share=True` in `launch()`.\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7867/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"http://127.0.0.1:7907/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -517,7 +531,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 17,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -541,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 32,
    "id": "88c04ebf-0671-4fea-95c9-bc1565d4bb4f",
    "metadata": {},
    "outputs": [],
@@ -568,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 33,
    "id": "0bb1f789-ff11-4cba-ac67-11b815e29d09",
    "metadata": {},
    "outputs": [
@@ -576,14 +590,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* Running on local URL:  http://127.0.0.1:7868\n",
+      "* Running on local URL:  http://127.0.0.1:7876\n",
       "* To create a public link, set `share=True` in `launch()`.\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7868/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"http://127.0.0.1:7876/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -596,7 +610,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 19,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 91,
    "id": "bbc8e930-ba2a-4194-8f7c-044659150626",
    "metadata": {},
    "outputs": [],
@@ -632,12 +646,13 @@
     "    with result as stream:\n",
     "        for text in stream.text_stream:\n",
     "            response += text or \"\"\n",
+    "            print(response)\n",
     "            yield response"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 92,
    "id": "a0066ffd-196e-4eaf-ad1e-d492958b62af",
    "metadata": {},
    "outputs": [
@@ -645,14 +660,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* Running on local URL:  http://127.0.0.1:7869\n",
+      "* Running on local URL:  http://127.0.0.1:7908\n",
       "* To create a public link, set `share=True` in `launch()`.\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7869/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"http://127.0.0.1:7908/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -665,9 +680,20 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 21,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello!\n",
+      "Hello! My\n",
+      "Hello! My response\n",
+      "Hello! My response will be in\n",
+      "Hello! My response will be in Markdown format.\n"
+     ]
     }
    ],
    "source": [
@@ -705,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 34,
    "id": "0087623a-4e31-470b-b2e6-d8d16fc7bcf5",
    "metadata": {},
    "outputs": [],
@@ -722,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
    "id": "8d8ce810-997c-4b6a-bc4f-1fc847ac8855",
    "metadata": {},
    "outputs": [
@@ -730,14 +756,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* Running on local URL:  http://127.0.0.1:7870\n",
+      "* Running on local URL:  http://127.0.0.1:7877\n",
       "* To create a public link, set `share=True` in `launch()`.\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7870/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"http://127.0.0.1:7877/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -750,7 +776,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 23,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -797,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 79,
    "id": "1626eb2e-eee8-4183-bda5-1591b58ae3cf",
    "metadata": {},
    "outputs": [],
@@ -825,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 93,
    "id": "c701ec17-ecd5-4000-9f68-34634c8ed49d",
    "metadata": {},
    "outputs": [],
@@ -838,27 +864,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 94,
+   "id": "2cef1174-681c-483f-a116-59aec38f2325",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# streaming with Gemini\n",
+    "\n",
+    "def stream_gemini(prompt):\n",
+    "    gemini_via_openai_client = OpenAI(\n",
+    "        api_key=google_api_key, \n",
+    "        base_url=\"https://generativelanguage.googleapis.com/v1beta/openai/\"\n",
+    "    )\n",
+    "    messages = [\n",
+    "        {\"role\": \"system\", \"content\": system_message},\n",
+    "        {\"role\": \"user\", \"content\": prompt}\n",
+    "      ]\n",
+    "    \n",
+    "    \n",
+    "    response = gemini_via_openai_client.chat.completions.create(\n",
+    "        model=\"gemini-2.5-flash\",\n",
+    "        messages=messages,\n",
+    "        stream = True\n",
+    "    )\n",
+    "\n",
+    "    # for chunk in response:\n",
+    "    #     yield chunk\n",
+    "    result = \"\"\n",
+    "    for chunk in response:\n",
+    "        result += chunk.choices[0].delta.content or \"\"\n",
+    "        yield result\n",
+    "\n",
+    "    # for chunk in response:\n",
+    "    #     if chunk.choices[0].delta.content:\n",
+    "    #         yield chunk.choices[0].delta.content\n",
+    "    # print(response.choices[0].message.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
    "id": "5def90e0-4343-4f58-9d4a-0e36e445efa4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def stream_brochure(company_name, url, model):\n",
-    "    yield \"\"\n",
-    "    prompt = f\"Please generate a company brochure for {company_name}. Here is their landing page:\\n\"\n",
+    "def stream_brochure(company_name, url, model, style):\n",
+    "    # yield \"\"\n",
+    "    prompt = f\"Please generate a company brochure for {company_name} in this {style}. Here is their landing page:\\n\"\n",
     "    prompt += Website(url).get_contents()\n",
     "    if model==\"GPT\":\n",
     "        result = stream_gpt(prompt)\n",
     "    elif model==\"Claude\":\n",
     "        result = stream_claude(prompt)\n",
+    "    elif model==\"Gemini\":\n",
+    "        result = stream_gemini(prompt)\n",
     "    else:\n",
     "        raise ValueError(\"Unknown model\")\n",
-    "    yield from result"
+    "    # yield from result\n",
+    "    for chunk in result:\n",
+    "        yield chunk"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 103,
    "id": "66399365-5d67-4984-9d47-93ed26c0bd3d",
    "metadata": {},
    "outputs": [
@@ -866,14 +935,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* Running on local URL:  http://127.0.0.1:7873\n",
+      "* Running on local URL:  http://127.0.0.1:7912\n",
       "* To create a public link, set `share=True` in `launch()`.\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7873/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"http://127.0.0.1:7912/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -886,7 +955,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 30,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -897,7 +966,8 @@
     "    inputs=[\n",
     "        gr.Textbox(label=\"Company name:\"),\n",
     "        gr.Textbox(label=\"Landing page URL including http:// or https://\"),\n",
-    "        gr.Dropdown([\"GPT\", \"Claude\"], label=\"Select model\")],\n",
+    "        gr.Dropdown([\"GPT\", \"Claude\", \"Gemini\"], label=\"Select model\"),\n",
+    "        gr.Dropdown([\"serious\", \"humoruous\", \"annoyed\"], label=\"Select your style\")],\n",
     "    outputs=[gr.Markdown(label=\"Brochure:\")],\n",
     "    flagging_mode=\"never\"\n",
     ")\n",
