--- a/week2/day4.ipynb
+++ b/week2/day4.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8b50bbe2-c0b1-49c3-9a5c-1ba7efa2bcb4",
    "metadata": {},
    "outputs": [],
@@ -28,10 +28,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "747e8786-9da8-4342-b6c9-f5f69c2e22ae",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OpenAI API Key exists and begins sk-proj-\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialization\n",
     "\n",
@@ -54,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "0a521d84-d07c-49ab-a0df-d6451499ed97",
    "metadata": {},
    "outputs": [],
@@ -66,10 +74,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "61a2a15d-b559-4844-b377-6bd5cb4949f6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7864\n",
+      "* To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7864/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# This function looks rather simpler than the one from my video, because we're taking advantage of the latest Gradio updates\n",
     "\n",
@@ -99,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "0696acb1-0b05-4dc2-80d5-771be04f1fb2",
    "metadata": {},
    "outputs": [],
@@ -116,17 +153,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "80ca4e09-6287-4d3f-997d-fa6afbcf6c85",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tool get_ticket_price called for Berlin\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'$499'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "get_ticket_price(\"Berlin\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "4afceded-7178-4c05-8fa6-9f2085e6a344",
    "metadata": {},
    "outputs": [],
@@ -135,7 +190,8 @@
     "\n",
     "price_function = {\n",
     "    \"name\": \"get_ticket_price\",\n",
-    "    \"description\": \"Get the price of a return ticket to the destination city. Call this whenever you need to know the ticket price, for example when a customer asks 'How much is a ticket to this city'\",\n",
+    "    \"description\": \"Get the price of a return ticket to the destination city. Call this whenever you need to know the ticket price, \\\n",
+    "    for example when a customer asks 'How much is a ticket to this city'\",\n",
     "    \"parameters\": {\n",
     "        \"type\": \"object\",\n",
     "        \"properties\": {\n",
@@ -152,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "bdca8679-935f-4e7f-97e6-e71a4d4f228c",
    "metadata": {},
    "outputs": [],
@@ -178,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "ce9b0744-9c78-408d-b9df-9f6fd9ed78cf",
    "metadata": {},
    "outputs": [],
@@ -189,17 +245,20 @@
     "\n",
     "    if response.choices[0].finish_reason==\"tool_calls\":\n",
     "        message = response.choices[0].message\n",
+    "        print(f\"message: {message}\")\n",
     "        response, city = handle_tool_call(message)\n",
+    "        print(f\"city: {city}, response: {response}\")\n",
     "        messages.append(message)\n",
     "        messages.append(response)\n",
     "        response = openai.chat.completions.create(model=MODEL, messages=messages)\n",
-    "    \n",
+    "        print(f\"response: {response}\")\n",
+    "            \n",
     "    return response.choices[0].message.content"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "b0992986-ea09-4912-a076-8e5603ee631f",
    "metadata": {},
    "outputs": [],
@@ -208,26 +267,83 @@
     "\n",
     "def handle_tool_call(message):\n",
     "    tool_call = message.tool_calls[0]\n",
+    "    print(f\"tool_call: {tool_call}\")\n",
     "    arguments = json.loads(tool_call.function.arguments)\n",
+    "    print(f\"arguments: {arguments}\")\n",
     "    city = arguments.get('destination_city')\n",
+    "    print(f\"city: {city}\")\n",
     "    price = get_ticket_price(city)\n",
+    "    print(f\"price: {price}\")\n",
     "    response = {\n",
     "        \"role\": \"tool\",\n",
     "        \"content\": json.dumps({\"destination_city\": city,\"price\": price}),\n",
     "        \"tool_call_id\": tool_call.id\n",
     "    }\n",
+    "    print(f\"response: {response}\")\n",
     "    return response, city"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "f4be8a71-b19e-4c2f-80df-f59ff2661f14",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7865\n",
+      "* To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7865/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "message: ChatCompletionMessage(content=None, refusal=None, role='assistant', annotations=[], audio=None, function_call=None, tool_calls=[ChatCompletionMessageFunctionToolCall(id='call_XNmgUUr0LCX4nmySzKjighhx', function=Function(arguments='{\"destination_city\":\"Baku\"}', name='get_ticket_price'), type='function')])\n",
+      "tool_call: ChatCompletionMessageFunctionToolCall(id='call_XNmgUUr0LCX4nmySzKjighhx', function=Function(arguments='{\"destination_city\":\"Baku\"}', name='get_ticket_price'), type='function')\n",
+      "arguments: {'destination_city': 'Baku'}\n",
+      "city: Baku\n",
+      "Tool get_ticket_price called for Baku\n",
+      "price: Unknown\n",
+      "response: {'role': 'tool', 'content': '{\"destination_city\": \"Baku\", \"price\": \"Unknown\"}', 'tool_call_id': 'call_XNmgUUr0LCX4nmySzKjighhx'}\n",
+      "city: Baku, response: {'role': 'tool', 'content': '{\"destination_city\": \"Baku\", \"price\": \"Unknown\"}', 'tool_call_id': 'call_XNmgUUr0LCX4nmySzKjighhx'}\n",
+      "response: ChatCompletion(id='chatcmpl-CJjcNXQQq15OnjeCvfDEiAKJgZ9oe', choices=[Choice(finish_reason='stop', index=0, logprobs=None, message=ChatCompletionMessage(content=\"I'm sorry, but I don't have information on ticket prices for Baku at the moment.\", refusal=None, role='assistant', annotations=[], audio=None, function_call=None, tool_calls=None))], created=1758819623, model='gpt-4o-mini-2024-07-18', object='chat.completion', service_tier='default', system_fingerprint='fp_560af6e559', usage=CompletionUsage(completion_tokens=18, prompt_tokens=101, total_tokens=119, completion_tokens_details=CompletionTokensDetails(accepted_prediction_tokens=0, audio_tokens=0, reasoning_tokens=0, rejected_prediction_tokens=0), prompt_tokens_details=PromptTokensDetails(audio_tokens=0, cached_tokens=0)))\n"
+     ]
+    }
+   ],
    "source": [
     "gr.ChatInterface(fn=chat, type=\"messages\").launch()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d551ce21-c66c-4f56-88ad-8212f16437ab",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -246,7 +362,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
